@@ -1,5 +1,5 @@
 # SysLog Daemon
-# Copyright 1999-2010 John Tytgat, Alex Waugh
+# Copyright 1999-2014 John Tytgat, Alex Waugh
 
 bin_PROGRAMS=SysLogD
 SysLogD_SOURCES=main.c modheader.cmhg
@@ -9,13 +9,15 @@ SysLogD_CCASFLAGS=-O3 -mmodule -Wall -std=gnu99
 SysLogD_LDFLAGS=-mmodule
 
 # CMunge invocation:
+AM_V_CMUNGE = $(am__v_CMUNGE_$(V))
+am__v_CMUNGE_ = $(am__v_CMUNGE_$(AM_DEFAULT_VERBOSITY))
+am__v_CMUNGE_0 = @echo "  CMUNGE" $@;
 SUFFIXES=.cmhg
-CMUNGE = cmunge
 CMUNGEFLAGS = -tgcc -32bit -p
 .cmhg.h:
-	$(CMUNGE) $(CMUNGEFLAGS) -d $@ $<
+	$(AM_V_CMUNGE)@CMUNGE@ $(CMUNGEFLAGS) -d $@ $<
 .cmhg.o:
-	$(CMUNGE) $(CMUNGEFLAGS) -o $@ $<
+	$(AM_V_CMUNGE)@CMUNGE@ $(CMUNGEFLAGS) -o $@ $<
 
 # Add ,ffa suffix to RISC OS Module filename during installation:
 install-exec-hook:
